Right side formatting

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,9 +11,23 @@
 
 .left-container {
   height: 100vh;
-  width: 25vw;
+  width: 20vw;
+  border-right: 2px solid #eee;
 }
 
 .right-container {
-  width: 75vw;
+  width: 80vw;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.top-panel {
+  height: 30vh;
+  border-bottom: 2px solid #eee;
+}
+
+.content-container {
+  min-height: 70vh;
+  background: #f0ffff;
 }
