--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,6 +10,9 @@
 }
 
 .left-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   height: 100vh;
   width: 20vw;
   border-right: 2px solid #eee;
@@ -30,4 +33,10 @@
 .content-container {
   min-height: 70vh;
   background: #f0ffff;
+}
+
+.logout {
+  display: flex;
+  justify-content: space-around;
+  border-top: 2px solid #eee; 
 }
