--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -33,6 +33,9 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
   height: 100vh;
   width: 20vw;
   border-right: 2px solid #eee;
@@ -43,6 +46,7 @@ a {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  transform: translateX(20vw);
 }
 
 .top-panel {
